Updating gradle with jvmargs required for latest java / xstream.